# shibuya-kafka-adapter

./: .gitignore  CLAUDE.md  Justfile  README.md  cabal.project  flake.nix  mori.dhall  process-compose.yaml
.dev/: jaeger-config.yaml
.seihou/: config.dhall  manifest.json
claude/skills/exec-plan/: SKILL.md
claude/skills/master-plan/: MASTERPLAN.md  SKILL.md
claude/skills/release/: SKILL.md
docs/masterplans/: 1-0.1.0.0-release-prep.md
docs/plans/: 1-initial-kafka-adapter.md  10-align-kafka-adapter-otel-semantic-conventions.md  11-upgrade-shibuya-core-0.4.md  2-add-benchmark-package.md  3-evaluate-hw-kafka-streamly-integration.md  4-release-metadata.md  5-fatal-error-propagation.md  6-api-surface-polish.md  7-developer-ergonomics.md  8-investigate-hw-kafka-client-instrumentation.md  9-add-shibuya-kafka-tracing-module.md
mori/: cookbook.dhall  repo-id
shibuya-kafka-adapter/: CHANGELOG.md  README.md  shibuya-kafka-adapter.cabal
shibuya-kafka-adapter-bench/: baseline.csv  shibuya-kafka-adapter-bench.cabal
shibuya-kafka-adapter-bench/bench/: Main.hs
shibuya-kafka-adapter-jitsurei/: shibuya-kafka-adapter-jitsurei.cabal
shibuya-kafka-adapter-jitsurei/app/: BasicConsumer.hs  FatalErrorDemo.hs  MultiPartition.hs  MultiTopic.hs  OffsetManagement.hs  OtelDemo.hs  OtelProducerDemo.hs  OtelUpstreamProbe.hs
shibuya-kafka-adapter/src/Shibuya/Adapter/: Kafka.hs
shibuya-kafka-adapter/src/Shibuya/Adapter/Kafka/: Config.hs  Convert.hs  Internal.hs  Tracing.hs
shibuya-kafka-adapter/test/: Main.hs
shibuya-kafka-adapter/test/Kafka/: TestEnv.hs
shibuya-kafka-adapter/test/Shibuya/Adapter/Kafka/: AdapterTest.hs  ConvertTest.hs  IntegrationTest.hs  TracingTest.hs
