cabal-version:   3.12
name:            shibuya-kafka-adapter
version:         0.1.0.0
synopsis:        Kafka adapter for the Shibuya queue processing framework
description:
  A Shibuya adapter that integrates with Apache Kafka via kafka-effectful
  and hw-kafka-client. Provides polling, offset commit semantics, partition
  awareness, and graceful shutdown.

author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
license:         MIT
build-type:      Simple
category:        Concurrency, Streaming
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Shibuya.Adapter.Kafka
    Shibuya.Adapter.Kafka.Config
    Shibuya.Adapter.Kafka.Convert

  other-modules:      Shibuya.Adapter.Kafka.Internal
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    , base             ^>=4.21.0.0
    , bytestring       ^>=0.12
    , containers       ^>=0.7
    , effectful-core   ^>=2.6.1.0
    , hw-kafka-client  >=5.3       && <6
    , kafka-effectful  ^>=0.1
    , shibuya-core     ^>=0.1.0.0
    , stm              ^>=2.5
    , streamly         ^>=0.11
    , streamly-core    ^>=0.3
    , text             ^>=2.1
    , time             ^>=1.14

  hs-source-dirs:     src
  default-language:   GHC2024

test-suite shibuya-kafka-adapter-test
  import:             warnings
  default-language:   GHC2024
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  other-modules:
    Kafka.TestEnv
    Shibuya.Adapter.Kafka.ConvertTest
    Shibuya.Adapter.Kafka.IntegrationTest

  build-depends:
    , base                   ^>=4.21.0.0
    , bytestring
    , containers
    , effectful-core
    , hw-kafka-client
    , kafka-effectful
    , random
    , shibuya-core
    , shibuya-kafka-adapter
    , stm
    , streamly
    , streamly-core
    , tasty                  ^>=1.5
    , tasty-hunit            ^>=0.10
    , text
    , time
